# omnibot

./: .bandit  .check_imports.py  .check_tool.py  .commit_fr36.py  .cov_runner.py  .coverage_report.json  .coverage_runner_fr22.py  .coveragerc  .crgignore  .env.example  .expect_runner.exp  .fr96_ruff_capture.py  .gitignore  .gitleaks.toml  .lint_check_fr11.py  .lint_invoker.py  .lint_runner.py  .m2m_tokens.json  .mutmut-cache  .mutmut-cache.unified_message.full  .pyright_fr85.json  .ruff_capture.py  .ruff_capture_fr07.py  .ruff_check_38.sh  .ruff_check_actual.py  .ruff_check_fr08.py  .ruff_check_fr104.py  .ruff_check_fr23.py  .ruff_check_fr26.py  .ruff_check_fr95.py  .ruff_check_runner.py  .ruff_check_wrapper.py  .ruff_exec.py  .ruff_fix_runner.py  .ruff_fr44_check.py  .ruff_lib_test.py  .ruff_list.py  .ruff_run.py  .ruff_run.sh  .ruff_run_fr100.py  (+85 more)
.claude/workflows/: hunt-bugs.py
.github/workflows/: harness_quality_gate.yml
.harness/traces/: agent_trajectory.jsonl
.methodology/: .gate1_scores.json  Phase3_STATUS.md  SAB.json  audit_gaps_5.md  audit_gaps_6.md  audit_phase3_workflow.js  bug_hunt_report.json  bug_hunt_targets.json  bug_hunt_v3.js  bug_hunt_v3_report.md  crg_baseline_p3.json  deferred_fixes.md  effort_metrics.db  fr_progress.json  gap_report.json  gate1_result.json  gate2_result.json  gate3_result.json  gate4_result.json  gate_timestamps.jsonl  harness_bugs_found.md  mutation_progress.md  mutation_survivors.json  phase1_plan.md  phase2_plan.md  phase3_audit_2026-06-24.md  phase3_audit_2026-06-24_fix_report.md  phase3_audit_report.md  phase3_audit_reverify.md  phase3_plan.md  phase4_plan.md  phase5_plan.md  phase6_plan.md  phase7_plan.md  phase8_plan.md  plan_status.md  quality_manifest.json  state.json
.methodology-archive/: .gate1_scores.json  bug_hunt_targets.json  bug_hunt_v2.js  crg_baseline_p3.json  effort_metrics.db  fr_progress.json  gap_report.json  gate1_result.json  gate2_result.json  gate4_result.json  gate_timestamps.jsonl  harness_bugs_found.md  last_block.md  mutation_batch_order.md  mutation_survivors.json  phase1_plan.md  phase2_plan.md  phase3_plan.md  phase4_plan.md  phase5_plan.md  phase6_plan.md  phase7_plan.md  phase8_plan.md  plan_status.md  quality_manifest.json  run_ruff.py  state.json
.methodology-archive/agent_b_approvals/: ADR.md.json  FINAL_SIGN_OFF.md.json  SAD.md.json  SRS.md.json  quality_manifest.json  quality_manifest.json.json
.methodology-archive/decision_logs/2026-06-18/: GATE_3_001.yaml
.methodology-archive/decision_logs/2026-06-20/: GATE_3_002.yaml  GATE_3_003.yaml  GATE_3_004.yaml  GATE_3_005.yaml  GATE_3_010.yaml  GATE_3_011.yaml  GATE_3_017.yaml  GATE_3_019.yaml  GATE_3_021.yaml  GATE_3_022.yaml  GATE_3_023.yaml  GATE_3_024.yaml  GATE_3_027.yaml  GATE_3_028.yaml  GATE_3_029.yaml  GATE_3_033.yaml  GATE_3_035.yaml  (+30 more)
.methodology-archive/trace/: attestation.latest.json
.methodology/agent_b_approvals/: QUALITY_REPORT.md.json  RELEASE_NOTES.md.json  SAD.md.json  SPEC_TRACKING.md.json  TEST_INVENTORY.yaml.json  TEST_SPEC.md.json  TRACEABILITY_MATRIX.md.json
.methodology/trace/: attestation.json  attestation.latest.json
00-summary/: Phase1_STAGE_PASS.md  Phase2_STAGE_PASS.md  Phase3_STAGE_PASS.md  Phase4_STAGE_PASS.md  Phase5_STAGE_PASS.md  Phase6_STAGE_PASS.md  Phase7_STAGE_PASS.md  USER_GUIDE.md
01-requirements/: SPEC_TRACKING.md  SRS.md  TRACEABILITY_MATRIX.md
02-architecture/: SAD.md  TEST_SPEC.md  audit_SAD_vs_SRS.md
02-architecture/adr/: ADR.md
03-development/: .m2m_tokens.json  load  test_fr201.py  verify_bugs.sh
03-development/.audit/: bug-report-2026-06-20.md  bug-report-2026-06-21.md  bug-report-2026-06-22.md  bug_contexts.txt  extract_context.py  harness-bugs-phase4.md  harness-bugs-phase5.md  harness-bugs-phase6.md  harness-bugs-phase7.md  harness-bugs-phase8.md  omnibot-plan-audit-2026-06-26-r2.md  omnibot-plan-audit-2026-06-26.md
03-development/k8s/: deployment.yaml  hpa.yaml  pdb.yaml  sealed-secrets.yaml
03-development/tests/: conftest.py  golden_dataset.py  pyramid.py  strategy.py  test_a2a_adapter_bugs.py  test_batch_1_p1_bugs.py  test_batch_2_bugs.py  test_batch_2_p1_bugs.py  test_batch_3_bugs.py  test_batch_3_p1_bugs.py  test_batch_4_p1_bugs.py  test_constraints.py  test_coverage_supplementary.py  test_coverage_supplementary2.py  test_deploy_webhook_integration.py  test_fr01.py  test_fr02.py  test_fr03.py  test_fr04.py  test_fr05.py  test_fr06.py  test_fr07.py  test_fr08.py  test_fr09.py  test_fr10.py  test_fr100.py  test_fr101.py  test_fr102.py  test_fr103.py  test_fr104.py  test_fr105.py  test_fr106.py  test_fr107.py  test_fr108.py  test_fr11.py  test_fr12.py  test_fr13.py  test_fr14.py  test_fr15.py  test_fr16.py  (+89 more)
03-development/web/: package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
04-testing/: COVERAGE_REPORT.md  TEST_PLAN.md  TEST_RESULTS.md  coverage_raw.txt
05-verification/: BASELINE.md  VERIFICATION_REPORT.md  audit_SRS_2026-06-17.md
06-quality/: QUALITY_REPORT.md
07-risk/: RISK_MITIGATION_PLANS.md  RISK_REGISTER.md  RISK_STATUS_REPORT.md
08-config/: CONFIG_RECORDS.md  RELEASE_CHECKLIST.md
alembic/: env.py
alembic/versions/: b4ca5f411741_initial_schema.py  bce6cf210287_add_columns_for_recent_fr.py  c4a1b2d3e4f5_add_media_attachments.py
app/infra/: config.py  rate_limit.py
scripts/: lint_check.py  load_lib.py  ruff_invoker.py  run_ruff_check.sh  run_ruff_lint.py  sort_test.py
tests/: conftest.py  test_deploy_webhook_integration.py  test_fr01.py  test_fr02.py  test_fr03.py  test_fr04.py  test_fr05.py  test_fr06.py  test_fr07.py  test_fr08.py  test_fr09.py  test_fr10.py  test_fr100.py  test_fr101.py  test_fr102.py  test_fr103.py  test_fr104.py  test_fr105.py  test_fr106.py  test_fr107.py  test_fr108.py  test_fr11.py  test_fr12.py  test_fr13.py  test_fr14.py  test_fr15.py  test_fr16.py  test_fr17.py  test_fr18.py  test_fr19.py  test_fr20.py  test_fr21.py  test_fr22.py  test_fr23.py  test_fr24.py  test_fr25.py  test_fr26.py  test_fr27.py  test_fr28.py  test_fr29.py  (+72 more)
tool_outputs/: mutmut_output.txt  scancode_output.json
(+866 files in other folders)
