[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omnibot"
version = "0.1.0"
description = "OmniBot — multi-platform conversational AI bot"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.136",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg[async,binary]>=3.1",
    "alembic>=1.13",
    "pgvector>=0.3",
    # Cache / Queue
    "redis[asyncio]>=5.0",
    "saq>=0.12",
    # LLM / AI
    "openai>=1.30",
    "tiktoken>=0.7",
    # Auth
    "python-jose[cryptography]>=3.3",
    # Observability
    "prometheus-client>=0.20",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-http>=1.25",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    # Config
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # HTTP client
    "httpx>=0.27",
    "httpx-sse>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["03-development/src"]

[tool.coverage.report]
omit = ["*/test_*", "*/conftest*"]
