# pyproject.toml -- omnibot (Phase 3+)
# Minimal config to enable ruff/pyright/pytest/mypy on the omnibot app tree.
# Real dependency manifest is built incrementally as FRs are implemented.

[project]
name = "omnibot"
version = "0.1.0"
description = "omnibot -- unified multi-platform customer service bot"
requires-python = ">=3.11"
dependencies = [
    # Core web
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    # Auth
    "pyjwt>=2.8",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",
    # DB
    "sqlmodel>=0.0.16",
    "psycopg[binary]>=3.1",
    "pgvector>=0.3.6",
    "alembic>=1.13",
    "aiosqlite>=0.20",
    # Redis / queue
    "redis>=5.0",
    "saq>=0.18",
    # LLM clients
    "openai>=1.30",
    "anthropic>=0.30",
    "google-generativeai>=0.5",
    "tiktoken>=0.6",
    # Observability
    "prometheus-client>=0.20",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp>=1.25",
    "structlog>=24.1",
    # Async / utilities
    "httpx>=0.27",
    "tenacity>=8.2",
    "pyyaml>=6.0",
    "cryptography>=42",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-benchmark>=4.0",
    "ruff>=0.4",
    "pyright>=1.1",
    "mypy>=1.10",
    "bandit>=1.7",
    "mutmut>=2.4",
    "gitleaks>=8.18",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["03-development/src"]
include = ["app*"]
exclude = ["harness*", ".sessi-work*", "docs*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["harness", ".sessi-work", ".ruff_cache", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = [
    "E501",
    "B008",
    "B904",
]

[tool.ruff.lint.per-file-ignores]
"03-development/tests/*" = ["B011"]
# FR-26: knowledge.py docstring contains a verbatim quotation from the SRS
# acceptance criteria (Chinese text). The fullwidth punctuation `：` and `；`
# is intentional Chinese typography within the quoted Chinese sentence and
# is NOT ambiguous with ASCII `:` / `;` in that context — RUF002 is a false
# positive here.
"03-development/src/app/core/knowledge.py" = ["RUF001", "RUF002", "RUF003"]
# FR-49: pipeline.py docstring quotes the SRS FR-49 acceptance criteria
# verbatim; the fullwidth `：` / `；` are part of the original Chinese
# text and are intentional in the citation.
"03-development/src/app/core/pipeline.py" = ["RUF001", "RUF002", "RUF003"]
# FR-17/18/19/50-58: SRS-citation docstrings + Chinese template strings
# in response_generator, pii, emotion, escalation, ab_testing, and the
# AEE adapters. All fullwidth chars (`：；，。！？「」（）`) are
# intentional Chinese typography / SRS-verbatim quotations — the
# RUF001/002/003 lint is a false positive for these contexts.
"03-development/src/app/core/response_generator.py" = ["RUF001", "RUF002", "RUF003"]
"03-development/src/app/core/pii.py" = ["RUF001", "RUF002", "RUF003"]
"03-development/src/app/core/emotion.py" = ["RUF001", "RUF002", "RUF003"]
"03-development/src/app/core/dst.py" = ["RUF001", "RUF002", "RUF003"]
"03-development/src/app/services/escalation.py" = ["RUF001", "RUF002", "RUF003"]
"03-development/src/app/services/ab_testing.py" = ["RUF001", "RUF002", "RUF003"]
"03-development/src/app/services/aee/__init__.py" = ["RUF001", "RUF002", "RUF003"]
"03-development/src/app/services/aee/adapter.py" = ["RUF001", "RUF002", "RUF003"]
"03-development/src/app/services/aee/mcp_adapter.py" = ["RUF001", "RUF002", "RUF003"]
"03-development/src/app/services/aee/cli_adapter.py" = ["RUF001", "RUF002", "RUF003"]
"03-development/src/app/services/aee/a2a_adapter.py" = ["RUF001", "RUF002", "RUF003"]
"03-development/src/app/services/aee/tool_executor.py" = ["RUF001", "RUF002", "RUF003"]

[tool.pyright]
include = ["03-development/src/app", "03-development/tests"]
exclude = ["harness", ".sessi-work", "__pycache__"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = false
reportMissingTypeStubs = false

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
follow_imports = "silent"
exclude = ["harness/", ".sessi-work/"]

[tool.pytest.ini_options]
pythonpath = ["03-development/src"]
testpaths = ["03-development/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*", "it_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short",
]
asyncio_mode = "auto"
markers = [
    "integration: integration tests (require running infra)",
    "slow: slow tests",
]

[tool.coverage.run]
source = ["03-development/src/app"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "harness/*",
    ".sessi-work/*",
]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.mutmut]
paths_to_exclude = [
    "03-development/src/app/__init__.py",
    "03-development/src/app/*/__init__.py",
    "03-development/tests/",
]
backup = false
runner = "python -m pytest -x --tb=short -q"
tests_dir = "03-development/tests/"
