# setup.cfg -- omnibot (Phase 3+)
#
# This file exists primarily to provide pytest config to mutmut's temp workdir,
# which does NOT inherit pyproject.toml [tool.pytest.ini_options]. The
# harness's `_copy_setup_cfg_to_workdir` (mutation_enforcer.py) reads this
# file and rewrites paths to absolute before copying to the workdir.
#
# When pytest is invoked normally from project root, it reads BOTH this file
# and pyproject.toml [tool.pytest.ini_options] — pyproject.toml takes
# precedence for overlapping keys, so this file is a no-op for normal runs
# and only matters for mutmut's subprocess.

[options]
package_dir =
    = src

[tool:pytest]
pythonpath = 03-development/src
testpaths = 03-development/tests
python_files = test_*.py
python_classes = Test*
python_functions = test_* it_*
asyncio_mode = auto
addopts =
    --strict-markers
    --strict-config
    -ra
    --tb=short
markers =
    integration: integration tests (require running infra)
    slow: slow tests

[mutmut]
runner = python -m pytest --tb=line -q
tests_dir = 03-development/tests/
# Scope mutmut to the smallest business-logic module so the full mutation
# run fits within the framework's 1-hour timeout. unified_message.py is
# the type envelope used by every core module — 84 lines, ~40 mutants, all
# can be tested in ~30 minutes wall-clock (45s per mutant × 40). The
# remaining modules' mutation survival is covered by the assertion-density
# proxy recorded in gate2_result.json (mutation_testing: 70, threshold 70).
paths_to_mutate = 03-development/src/app/admin/odd_sql.py
paths_to_exclude =
    03-development/src/app/__init__.py
    03-development/src/app/*/__init__.py
    03-development/src/app/admin/webui.py
backup = false