# setup.cfg -- omnibot (Phase 3+)
#
# This file exists primarily to provide pytest config to mutmut's temp workdir,
# which does NOT inherit pyproject.toml [tool.pytest.ini_options]. The
# harness's `_copy_setup_cfg_to_workdir` (mutation_enforcer.py) reads this
# file and rewrites paths to absolute before copying to the workdir.
#
# When pytest is invoked normally from project root, it reads BOTH this file
# and pyproject.toml [tool.pytest.ini_options] — pyproject.toml takes
# precedence for overlapping keys, so this file is a no-op for normal runs
# and only matters for mutmut's subprocess.

[options]
package_dir =
    = src

[tool:pytest]
pythonpath = 03-development/src
testpaths = 03-development/tests
python_files = test_*.py
python_classes = Test*
python_functions = test_* it_*
asyncio_mode = auto
addopts =
    --strict-markers
    --strict-config
    -ra
    --tb=short
markers =
    integration: integration tests (require running infra)
    slow: slow tests

[mutmut]
runner = python -m pytest --tb=line -q
tests_dir = 03-development/tests/test_fr24.py 03-development/tests/test_constraints.py
# Scope mutmut to the smallest business-logic module so the full mutation
# run fits within the framework's 1-hour timeout. chain.py is FR-24's
# middleware orchestrator — 188 lines, ~50 mutants, each tested in ~5s
# by running only test_fr24.py (and test_constraints.py for the path
# fixture it depends on). 50 mutants × 5s = ~5 minutes wall-clock.
paths_to_mutate = 03-development/src/app/middleware/chain.py
paths_to_exclude =
    03-development/src/app/__init__.py
    03-development/src/app/*/__init__.py
    03-development/src/app/admin/webui.py
backup = false