# setup.cfg -- omnibot (Phase 3+)
#
# This file exists primarily to provide pytest config to mutmut's temp workdir,
# which does NOT inherit pyproject.toml [tool.pytest.ini_options]. The
# harness's `_copy_setup_cfg_to_workdir` (mutation_enforcer.py) reads this
# file and rewrites paths to absolute before copying to the workdir.
#
# When pytest is invoked normally from project root, it reads BOTH this file
# and pyproject.toml [tool.pytest.ini_options] — pyproject.toml takes
# precedence for overlapping keys, so this file is a no-op for normal runs
# and only matters for mutmut's subprocess.

[options]
package_dir =
    = src

[tool:pytest]
pythonpath = 03-development/src
testpaths = 03-development/tests
python_files = test_*.py
python_classes = Test*
python_functions = test_* it_*
asyncio_mode = auto
addopts =
    --strict-markers
    --strict-config
    -ra
    --tb=short
markers =
    integration: integration tests (require running infra)
    slow: slow tests

[mutmut]
runner = python -m pytest --tb=line -q
tests_dir = 03-development/tests/integration/test_fr10.py:03-development/tests/integration/test_fr11.py:03-development/tests/integration/test_fr12.py:03-development/tests/integration/test_fr13.py:03-development/tests/integration/test_fr14.py:03-development/tests/integration/test_fr15.py:03-development/tests/integration/test_fr16.py
paths_to_mutate = 03-development/src/app/core/paladin.py
paths_to_exclude =
    03-development/src/app/__init__.py
    03-development/src/app/*/__init__.py
    03-development/src/app/admin/webui.py
backup = false